[gd_scene load_steps=7 format=3 uid="uid://xmpex08obkk6"]

[ext_resource type="Script" path="res://scripts/falling_platform.gd" id="1_s27vi"]
[ext_resource type="Texture2D" uid="uid://b4mff3wopfq5f" path="res://assets/Tileset_SpreadingSeas/falling_block_small.png" id="2_wurrl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65sec"]
size = Vector2(58.4, 38.8)

[sub_resource type="Animation" id="Animation_evc8d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ahv1w"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(2, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d1km"]
_data = {
"RESET": SubResource("Animation_evc8d"),
"shake": SubResource("Animation_ahv1w")
}

[node name="falling-platform" type="AnimatableBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_s27vi")

[node name="respawn_timer" type="Timer" parent="."]

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("2_wurrl")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0.800002, -0.600002)
shape = SubResource("RectangleShape2D_65sec")
one_way_collision = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4d1km")
}

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawntimer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
